src/objects/Int_Asset_Feature__c.object
<CustomObject>
    <description>Int Asset Feature</description>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Name</description>
        <label>Asset Name</label>
        <referenceTo>Int_Asset__c</referenceTo>
        <relationshipLabel>Int Asset Features</relationshipLabel>
        <relationshipName>Int_Asset_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <description>Asset Number</description>
        <label>Asset Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Source_System__c</fullName>
        <description>Asset Source System</description>
        <label>Asset Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <description>Feature Name</description>
        <label>Feature Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_AlphaNumeric__c</fullName>
        <description>Value AlphaNumeric</description>
        <label>Value AlphaNumeric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_DateTime__c</fullName>
        <description>Value DateTime</description>
        <label>Value DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value_Numeric__c</fullName>
        <description>Value Numeric</description>
        <label>Value Numeric</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <label>Int Asset Feature</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASF-{0000000000}</displayFormat>
        <label>Asset Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Asset Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>